--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -34,7 +34,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.2"
+    "typescript": "^5.1.6"
   }
 }
