--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.61.0",
